created fuctionality to add tickets

--- a/templates/staffHome.html
+++ b/templates/staffHome.html
@@ -13,6 +13,8 @@
     <br></br>
     <a href="/addFlight">New flight</a>
     <br></br>
+    <a href="/staffCreateTicket">Create Tickets</a>
+    <br></br>
     <a href="/flightStatus">Update flight status</a>
     <br></br>
     <a href="/addPlane">New plane</a>
