--- a/templates/staffDateChart.html
+++ b/templates/staffDateChart.html
@@ -21,8 +21,8 @@
         {% endif %}
     </form>
     {% if not error %}
-    <h2><p style="color: #006587">Displaying payments from <b>{{bmonth}}, {{byear}} to {{emonth}}, {{eyear}}</b> - ({{noMonths}} months) = <b>${{rangedTotalCost}}</b></p></h2>
-    <h3><p style="color: #a1002b">Total cost from <b>{{lstMonth}}, {{lstYear}} to {{tdyMonth}}, {{tdyYear}}</b> - (LAST YEAR) = <b>${{defaultYearCost}}</b></p></h3>
+    <h2><p style="color: #006587">Displaying tickets sold from <b>{{bmonth}}, {{byear}} to {{emonth}}, {{eyear}}</b> - ({{noMonths}} months) </p></h2>
+    <h3><p style="color: #a1002b">Total tickets from <b>{{lstMonth}}, {{lstYear}} to {{tdyMonth}}, {{tdyYear}}</b> - (LAST YEAR) </p></h3>
 	<div id='myDiv'>
     {% endif %}
     <script type="text/javascript">
